GNOME Bugzilla – Bug 675301
test-recorder fixes
Last modified: 2012-05-03 07:30:42 UTC
These patches unbreak test-recorder.c
Created attachment 213298 [details] [review] test-recorder: Explicitly make the clutter API coordinates doubles That's what clutter expects and it would crash otherwise.
Created attachment 213299 [details] [review] test-recorder: Create the recorder only after the stage is realized The recorder needs the stage's XID so it can only be created after the stage is realized.
Review of attachment 213298 [details] [review]: Yes.
Review of attachment 213299 [details] [review]: This seems fine as well.
Attachment 213298 [details] pushed as cb5941e - test-recorder: Explicitly make the clutter API coordinates doubles Attachment 213299 [details] pushed as d579cd1 - test-recorder: Create the recorder only after the stage is realized