test-recorder: Explicitly make the clutter API coordinates doubles

That's what clutter expects and it would crash otherwise.

https://bugzilla.gnome.org/show_bug.cgi?id=675301